--- a/src/main/webapp/WEB-INF/css/style.css
+++ b/src/main/webapp/WEB-INF/css/style.css
@@ -12,7 +12,7 @@ body {
     width: 380px;
     margin: 40px auto 0;
     background: #fff;
-    padding: 40px;
+    padding: 30px 40px 10px 40px;
     box-sizing: border-box;
     height: auto;
     position: relative;
@@ -43,7 +43,7 @@ body {
 }
 
 .sub-container {
-    padding-top: 30px;
+    padding-top: 10px;
 }
 
 .form {
@@ -58,6 +58,7 @@ body {
 
 .form .input {
     margin: 5px 0 0;
+    height: 25px;
     width: 100%;
     padding: 15px;
     color: #1f72ff;
@@ -70,6 +71,7 @@ body {
 .select {
     display: block;
     margin: 5px 0 0;
+    /*height: 25px;*/
     width: 100%;
     padding: 15px;
     color: #1f72ff;
@@ -94,7 +96,7 @@ body {
     font-weight: bold;
     letter-spacing: 1px;
     cursor: pointer;
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
 .error {
